@@ -9,50 +9,80 @@
     <description>The Amazon Athena Query Federation SDK allows you to customize Amazon Athena with your own code.</description>
     <url>https://github.com/awslabs/aws-athena-query-federation</url>
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
-        <aws-sdk.version>1.12.400</aws-sdk.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.release>11</maven.compiler.release>
+        <maven.compiler.plugin.version>3.14.0</maven.compiler.plugin.version>
+        <!--- to meet engine version 1.12.533-->
+        <aws-sdk-v2.version>2.31.49</aws-sdk-v2.version>
         <aws.lambda-java-core.version>1.2.2</aws.lambda-java-core.version>
-        <aws.lambda-java-log4j2.version>1.5.1</aws.lambda-java-log4j2.version>
-        <aws-cdk.version>1.191.0</aws-cdk.version>
-        <jsii.version>1.74.0</jsii.version>
-        <slf4j-log4j.version>2.0.6</slf4j-log4j.version>
-        <mockito.legacy.version>3.3.3</mockito.legacy.version>
+        <aws.lambda-java-log4j2.version>1.6.0</aws.lambda-java-log4j2.version>
+        <aws-cdk.version>1.204.0</aws-cdk.version>
+        <jsii.version>1.112.0</jsii.version>
+        <!--- to meet engine version 2.0.7-->
+        <slf4j-log4j.version>2.0.17</slf4j-log4j.version>
         <mockito.version>4.11.0</mockito.version>
-        <powermock.version>2.0.9</powermock.version>
         <junit.version>4.13.2</junit.version>
-        <jqwik.version>1.7.2</jqwik.version>
-        <assertj.version>3.24.2</assertj.version>
-        <testng.version>7.7.1</testng.version>
-        <fasterxml.jackson.version>2.14.2</fasterxml.jackson.version>
-        <surefire.failsafe.version>3.0.0-M8</surefire.failsafe.version>
-        <log4j2Version>2.19.0</log4j2Version>
-        <apache.arrow.version>10.0.1</apache.arrow.version>
-        <netty.version>4.1.87.Final</netty.version>
-        <guava.version>31.1-jre</guava.version>
-        <protobuf3.version>3.21.12</protobuf3.version>
+        <jqwik.version>1.9.2</jqwik.version>
+        <assertj.version>3.27.3</assertj.version>
+        <testng.version>7.11.0</testng.version>
+         <!--- to meet engine version 2.12.6 -->
+        <fasterxml.jackson.version>2.19.0</fasterxml.jackson.version>
+        <surefire.failsafe.version>3.5.3</surefire.failsafe.version>
+        <log4j2Version>2.24.2</log4j2Version>
+        <apache.arrow.version>18.1.0</apache.arrow.version>
+        <guava.version>33.4.0-jre</guava.version>
+        <protobuf3.version>3.25.3</protobuf3.version>
         <antlr.st4.version>4.3.4</antlr.st4.version>
         <log4j2.cachefile.transformer.version>2.15</log4j2.cachefile.transformer.version>
         <apache.httpclient.version>4.5.14</apache.httpclient.version>
-        <mssql.jdbc.version>11.2.3.jre11</mssql.jdbc.version>
-        <commons.cli.version>1.5.0</commons.cli.version>
+        <mssql.jdbc.version>12.10.0.jre11</mssql.jdbc.version>
+        <commons.cli.version>1.9.0</commons.cli.version>
+        <spark.version>3.2.1</spark.version>
         <test.system.rules.version>1.19.0</test.system.rules.version>
         <!-- These are mvn on purpose to not conflict with the maven.* namespace -->
-        <mvn.checkstyle.version>3.2.1</mvn.checkstyle.version>
-        <mvn.shade.plugin.version>3.4.1</mvn.shade.plugin.version>
-        <mvn.source.plugin.version>3.2.1</mvn.source.plugin.version>
-        <mvn.javadoc.plugin.version>3.4.1</mvn.javadoc.plugin.version>
-        <mvn.jar.plugin.version>3.3.0</mvn.jar.plugin.version>
+        <mvn.checkstyle.version>3.6.0</mvn.checkstyle.version>
+        <mvn.shade.plugin.version>3.6.0</mvn.shade.plugin.version>
+        <mvn.source.plugin.version>3.3.1</mvn.source.plugin.version>
+        <mvn.javadoc.plugin.version>3.11.2</mvn.javadoc.plugin.version>
+        <mvn.jar.plugin.version>3.4.2</mvn.jar.plugin.version>
+        <doclint>none</doclint>
     </properties>
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.junit</groupId>
                 <artifactId>junit-bom</artifactId>
-                <version>5.9.2</version>
+                <version>5.12.2</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>software.amazon.jsii</groupId>
+                <artifactId>jsii-runtime</artifactId>
+                <version>${jsii.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.datatype</groupId>
+                        <artifactId>jackson-datatype-jsr310</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.dataformat</groupId>
+                        <artifactId>jackson-dataformat-cbor</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-core</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-databind</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-annotations</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -84,20 +114,20 @@
         <tag>HEAD</tag>
     </scm>
     <modules>
-        <module>athena-arrow-java-dist</module>
+        <module>athena-federation-sdk</module>
+        <module>athena-federation-sdk-tools</module>
+        <module>athena-federation-integ-test</module>
         <module>athena-cloudwatch</module>
+        <module>athena-cloudwatch-metrics</module>
+        <module>athena-dynamodb</module>
+        <module>athena-aws-cmdb</module>
         <module>athena-docdb</module>
         <module>athena-redis</module>
-        <module>athena-aws-cmdb</module>
-        <module>athena-dynamodb</module>
         <module>athena-hbase</module>
-        <module>athena-cloudwatch-metrics</module>
         <module>athena-example</module>
         <module>athena-elasticsearch</module>
-        <module>athena-federation-sdk</module>
         <module>athena-tpcds</module>
         <module>athena-jdbc</module>
-        <module>athena-federation-sdk-tools</module>
         <module>athena-mysql</module>
         <module>athena-postgresql</module>
         <module>athena-redshift</module>
@@ -105,7 +135,6 @@
         <module>athena-vertica</module>
         <module>athena-timestream</module>
         <module>athena-neptune</module>
-        <module>athena-federation-integ-test</module>
         <module>athena-google-bigquery</module>
         <module>athena-oracle</module>
         <module>athena-sqlserver</module>
@@ -118,10 +147,20 @@
         <module>athena-cloudera-impala</module>
         <module>athena-hortonworks-hive</module>
         <module>athena-db2</module>
+        <module>athena-db2-as400</module>
         <module>athena-msk</module>
+        <module>athena-kafka</module>
         <module>athena-gcs</module>
+        <module>athena-clickhouse</module>
     </modules>
     <dependencies>
+         <dependency>
+             <!-- Setting this dependency to provided with the range version will ensure to exclude it from all transitive depndencies -->
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>[1.2,)</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
@@ -200,7 +239,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
-                    <version>3.5.0</version>
+                    <version>3.8.1</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -245,7 +284,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.8</version>
+                <version>0.8.13</version>
                 <executions>
                     <execution>
                         <goals>
@@ -286,7 +325,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>license-maven-plugin</artifactId>
-                <version>2.0.0</version>
+                <version>2.5.0</version>
                 <configuration>
                     <verbose>false</verbose>
                     <addSvnKeyWords>false</addSvnKeyWords>
@@ -354,15 +393,61 @@
     </build>
     <profiles>
         <profile>
+            <id>java8</id>
+            <activation>
+                <jdk>1.8</jdk>
+            </activation>
+            <properties>
+                <maven.compiler.release>8</maven.compiler.release>
+            </properties>
+        </profile>
+        <profile>
+            <id>java17</id>
+            <activation>
+                <jdk>17</jdk>
+            </activation>
+            <properties>
+                <maven.compiler.release>17</maven.compiler.release>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${surefire.failsafe.version}</version>
+                        <configuration>
+                            <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
+                            <excludes>
+                                <exclude>*IntegTest</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>${surefire.failsafe.version}</version>
+                        <configuration>
+                            <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
+                            <forkCount>3C</forkCount>
+                            <reuseForks>false</reuseForks>
+                            <includes>
+                                <include>*IntegTest</include>
+                            </includes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>release</id>
             <distributionManagement>
                 <snapshotRepository>
-                    <id>ossrh</id>
-                    <url>https://aws.oss.sonatype.org/content/repositories/snapshots</url>
+                    <id>central</id>
+                    <url>https://central.sonatype.com/repository/maven-snapshots/</url>
                 </snapshotRepository>
                 <repository>
-                    <id>ossrh</id>
-                    <url>https://aws.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                    <id>central</id>
+                    <url>https://ossrh-staging-api.central.sonatype.com/service/local/staging/deploy/maven2/</url>
                 </repository>
             </distributionManagement>
             <build>
@@ -400,7 +485,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>3.0.1</version>
+                        <version>3.2.7</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -419,14 +504,13 @@
                         </executions>
                     </plugin>
                     <plugin>
-                        <groupId>org.sonatype.plugins</groupId>
-                        <artifactId>nexus-staging-maven-plugin</artifactId>
-                        <version>1.6.13</version>
+                        <groupId>org.sonatype.central</groupId>
+                        <artifactId>central-publishing-maven-plugin</artifactId>
+                        <version>0.7.0</version>
                         <extensions>true</extensions>
                         <configuration>
-                            <serverId>ossrh</serverId>
-                            <nexusUrl>https://aws.oss.sonatype.org</nexusUrl>
-                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                            <publishingServerId>central</publishingServerId>
+                            <autoPublish>true</autoPublish>
                         </configuration>
                     </plugin>
                 </plugins>
